fixup! Attempt to fix unvisible horizontal line

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,12 +3,12 @@
 
 @import "{{ site.theme }}";
 
-hr {
+.main-content hr {
     display: block;
-    height: 1px;
+    height: .25em;
     border: 0;
-    border-top: 1px solid #ccc;
-    margin: 1em 0;
+    background-color: #e1e4e8;
+    margin: 24px 0;
     padding: 0;
 }
 
